# server-gateway/pb/data.pb.go
@@ -140,6 +140,7 @@ type FileUploadInfo struct {
 	Link         string `protobuf:"bytes,3,opt,name=link,proto3" json:"link,omitempty"`
 	Sizefile     int64  `protobuf:"varint,4,opt,name=sizefile,proto3" json:"sizefile,omitempty"`
 	Timecreateat string `protobuf:"bytes,5,opt,name=timecreateat,proto3" json:"timecreateat,omitempty"`
+	FileId       string `protobuf:"bytes,6,opt,name=fileId,proto3" json:"fileId,omitempty"`
 }
 
 func (x *FileUploadInfo) Reset() {
@@ -205,6 +206,13 @@ func (x *FileUploadInfo) GetSizefile() int64 {
 func (x *FileUploadInfo) GetTimecreateat() string {
 	if x != nil {
 		return x.Timecreateat
+	}
+	return ""
+}
+
+func (x *FileUploadInfo) GetFileId() string {
+	if x != nil {
+		return x.FileId
 	}
 	return ""
 }
@@ -276,7 +284,7 @@ var file_data_proto_rawDesc = []byte{
 	0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x75,
 	0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x6e,
 	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x66, 0x75, 0x6c, 0x6c, 0x6e,
-	0x61, 0x6d, 0x65, 0x22, 0x9c, 0x01, 0x0a, 0x0e, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f,
+	0x61, 0x6d, 0x65, 0x22, 0xb4, 0x01, 0x0a, 0x0e, 0x46, 0x69, 0x6c, 0x65, 0x55, 0x70, 0x6c, 0x6f,
 	0x61, 0x64, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x1a, 0x0a, 0x08, 0x66, 0x69, 0x6c, 0x65, 0x6e, 0x61,
 	0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x66, 0x69, 0x6c, 0x65, 0x6e, 0x61,
 	0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x66, 0x69, 0x6c, 0x65, 0x74, 0x79, 0x70, 0x65, 0x18, 0x02,
@@ -286,11 +294,13 @@ var file_data_proto_rawDesc = []byte{
 	0x20, 0x01, 0x28, 0x03, 0x52, 0x08, 0x73, 0x69, 0x7a, 0x65, 0x66, 0x69, 0x6c, 0x65, 0x12, 0x22,
 	0x0a, 0x0c, 0x74, 0x69, 0x6d, 0x65, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x61, 0x74, 0x18, 0x05,
 	0x20, 0x01, 0x28, 0x09, 0x52, 0x0c, 0x74, 0x69, 0x6d, 0x65, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65,
-	0x61, 0x74, 0x22, 0x31, 0x0a, 0x0b, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x49, 0x6e, 0x66,
-	0x6f, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69,
-	0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x42, 0x10, 0x5a, 0x0e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2d,
-	0x74, 0x65, 0x73, 0x74, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x61, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x66, 0x69, 0x6c, 0x65, 0x49, 0x64, 0x18, 0x06, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x06, 0x66, 0x69, 0x6c, 0x65, 0x49, 0x64, 0x22, 0x31, 0x0a, 0x0b, 0x53, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
+	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x42, 0x10, 0x5a,
+	0x0e, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2d, 0x74, 0x65, 0x73, 0x74, 0x2f, 0x70, 0x62, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
