# server-storage/pb_storage/data_storage.pb.go
@@ -31,6 +31,7 @@ type FileInfo struct {
 	Size         int64  `protobuf:"varint,4,opt,name=size,proto3" json:"size,omitempty"`
 	Link         string `protobuf:"bytes,5,opt,name=link,proto3" json:"link,omitempty"`
 	Timecreateat string `protobuf:"bytes,6,opt,name=timecreateat,proto3" json:"timecreateat,omitempty"`
+	Fileid       string `protobuf:"bytes,7,opt,name=fileid,proto3" json:"fileid,omitempty"`
 }
 
 func (x *FileInfo) Reset() {
@@ -107,12 +108,19 @@ func (x *FileInfo) GetTimecreateat() string {
 	return ""
 }
 
+func (x *FileInfo) GetFileid() string {
+	if x != nil {
+		return x.Fileid
+	}
+	return ""
+}
+
 var File_data_storage_proto protoreflect.FileDescriptor
 
 var file_data_storage_proto_rawDesc = []byte{
 	0x0a, 0x12, 0x64, 0x61, 0x74, 0x61, 0x5f, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x2e, 0x70,
 	0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0a, 0x70, 0x62, 0x5f, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65,
-	0x22, 0xa8, 0x01, 0x0a, 0x08, 0x46, 0x69, 0x6c, 0x65, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x1a, 0x0a,
+	0x22, 0xc0, 0x01, 0x0a, 0x08, 0x46, 0x69, 0x6c, 0x65, 0x49, 0x6e, 0x66, 0x6f, 0x12, 0x1a, 0x0a,
 	0x08, 0x66, 0x69, 0x6c, 0x65, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
 	0x08, 0x66, 0x69, 0x6c, 0x65, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x74, 0x79, 0x70,
 	0x65, 0x66, 0x69, 0x6c, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x74, 0x79, 0x70,
@@ -122,10 +130,12 @@ var file_data_storage_proto_rawDesc = []byte{
 	0x69, 0x7a, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x18, 0x05, 0x20, 0x01, 0x28,
 	0x09, 0x52, 0x04, 0x6c, 0x69, 0x6e, 0x6b, 0x12, 0x22, 0x0a, 0x0c, 0x74, 0x69, 0x6d, 0x65, 0x63,
 	0x72, 0x65, 0x61, 0x74, 0x65, 0x61, 0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0c, 0x74,
-	0x69, 0x6d, 0x65, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x61, 0x74, 0x42, 0x27, 0x5a, 0x25, 0x73,
-	0x65, 0x72, 0x76, 0x65, 0x72, 0x2d, 0x74, 0x65, 0x73, 0x74, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65,
-	0x72, 0x2d, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x2f, 0x70, 0x62, 0x5f, 0x73, 0x74, 0x6f,
-	0x72, 0x61, 0x67, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x69, 0x6d, 0x65, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x61, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x66,
+	0x69, 0x6c, 0x65, 0x69, 0x64, 0x18, 0x07, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x66, 0x69, 0x6c,
+	0x65, 0x69, 0x64, 0x42, 0x27, 0x5a, 0x25, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2d, 0x74, 0x65,
+	0x73, 0x74, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2d, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67,
+	0x65, 0x2f, 0x70, 0x62, 0x5f, 0x73, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
